fix: global variable

--- a/dc_crime_.ipynb
+++ b/dc_crime_.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -193,14 +193,19 @@
     "X_train_balanced, y_train_balanced = smote_enn.fit_resample(X_train, y_train)\n",
     "print(\"Balanced class distribution after SMOTEENN:\", np.bincount(y_train_balanced))\n",
     "\n",
-    "# Define models\n",
-    "models = {\n",
-    "    \"Logistic Regression\": LogisticRegression(class_weight='balanced', C=0.1, random_state=42),\n",
-    "    \"Decision Tree\": DecisionTreeClassifier(max_depth=5, random_state=42),\n",
-    "    \"Random Forest\": RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced'),\n",
-    "    \"K-Nearest Neighbors\": KNeighborsClassifier(n_neighbors=5),\n",
-    "    \"XGBoost\": XGBClassifier(n_estimators=100, max_depth=7, scale_pos_weight=5, random_state=42)\n",
-    "}\n",
+    "# Train models and save as individual variables\n",
+    "logistic_model = LogisticRegression(class_weight='balanced', C=0.1, random_state=42)\n",
+    "tree_model = DecisionTreeClassifier(max_depth=5, random_state=42)\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced')\n",
+    "knn_model = KNeighborsClassifier(n_neighbors=5)\n",
+    "xgb_model = XGBClassifier(n_estimators=100, max_depth=7, scale_pos_weight=5, random_state=42)\n",
+    "\n",
+    "# Fit models\n",
+    "logistic_model.fit(X_train_balanced, y_train_balanced)\n",
+    "tree_model.fit(X_train_balanced, y_train_balanced)\n",
+    "rf_model.fit(X_train_balanced, y_train_balanced)\n",
+    "knn_model.fit(X_train_balanced, y_train_balanced)\n",
+    "xgb_model.fit(X_train_balanced, y_train_balanced)\n",
     "\n",
     "# Initialize metrics collection\n",
     "metrics = {\n",
@@ -213,8 +218,15 @@
     "}\n",
     "\n",
     "# Evaluate models and plot individual confusion matrices\n",
+    "models = {\n",
+    "    \"Logistic Regression\": logistic_model,\n",
+    "    \"Decision Tree\": tree_model,\n",
+    "    \"Random Forest\": rf_model,\n",
+    "    \"K-Nearest Neighbors\": knn_model,\n",
+    "    \"XGBoost\": xgb_model\n",
+    "}\n",
+    "\n",
     "for name, model in models.items():\n",
-    "    model.fit(X_train_balanced, y_train_balanced)  # Train the model\n",
     "    y_pred = model.predict(X_test)  # Make predictions\n",
     "    y_prob = model.predict_proba(X_test)[:, 1] if hasattr(model, \"predict_proba\") else np.zeros(len(y_test))  # Probability predictions\n",
     "    fpr, tpr, _ = roc_curve(y_test, y_prob)  # Compute ROC curve\n",
@@ -283,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -293,15 +305,15 @@
       "\n",
       "--- Safety Prediction ---\n",
       "Location: (38.897, -77.0064)\n",
-      "Day of Week: 1 (Weekday), Hour: 23:00\n",
+      "Day of Week: 2 (Weekday), Hour: 23:00\n",
       "Is Hotspot (based on historical data): No\n",
       "\n",
       "Predictions and probabilities (Dangerous Possibility):\n",
-      "Logistic Regression: Safe (0.24)\n",
+      "Logistic Regression: Safe (0.23)\n",
       "Decision Tree: Safe (0.27)\n",
-      "Random Forest: Safe (0.06)\n",
-      "K-Nearest Neighbors: Safe (0.20)\n",
-      "XGBoost: Safe (0.11)\n"
+      "Random Forest: Safe (0.08)\n",
+      "K-Nearest Neighbors: Safe (0.40)\n",
+      "XGBoost: Safe (0.28)\n"
      ]
     }
    ],
@@ -330,14 +342,11 @@
     "    # Standardize the features using the same scaler used during model training\n",
     "    input_data_scaled = scaler.transform(input_data)\n",
     "\n",
-    "    # Fix for KNeighborsClassifier: Re-add feature names to the scaled data\n",
-    "    input_data_scaled_with_names = pd.DataFrame(input_data_scaled, columns=features.columns)\n",
-    "\n",
     "    # Step 3: Predict probabilities using each model\n",
     "    logistic_probability = logistic_model.predict_proba(input_data_scaled)[0][1]\n",
     "    tree_probability = tree_model.predict_proba(input_data_scaled)[0][1]\n",
     "    rf_probability = rf_model.predict_proba(input_data_scaled)[0][1]\n",
-    "    knn_probability = knn_model.predict_proba(input_data_scaled_with_names)[0][1]  # Fix applied here\n",
+    "    knn_probability = knn_model.predict_proba(input_data_scaled)[0][1]  # Fix: Directly pass scaled data\n",
     "    xgb_probability = xgb_model.predict_proba(input_data_scaled)[0][1]\n",
     "\n",
     "    # Step 4: Check if the location is historically marked as a hotspot\n",
@@ -383,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
