--- a/dc_crime-Landmark.ipynb
+++ b/dc_crime-Landmark.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,14 +193,19 @@
     "X_train_balanced, y_train_balanced = smote_enn.fit_resample(X_train, y_train)\n",
     "print(\"Balanced class distribution after SMOTEENN:\", np.bincount(y_train_balanced))\n",
     "\n",
-    "# Define models\n",
-    "models = {\n",
-    "    \"Logistic Regression\": LogisticRegression(class_weight='balanced', C=0.1, random_state=42),\n",
-    "    \"Decision Tree\": DecisionTreeClassifier(max_depth=5, random_state=42),\n",
-    "    \"Random Forest\": RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced'),\n",
-    "    \"K-Nearest Neighbors\": KNeighborsClassifier(n_neighbors=5),\n",
-    "    \"XGBoost\": XGBClassifier(n_estimators=100, max_depth=7, scale_pos_weight=5, random_state=42)\n",
-    "}\n",
+    "# Train models and save as individual variables\n",
+    "logistic_model = LogisticRegression(class_weight='balanced', C=0.1, random_state=42)\n",
+    "tree_model = DecisionTreeClassifier(max_depth=5, random_state=42)\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced')\n",
+    "knn_model = KNeighborsClassifier(n_neighbors=5)\n",
+    "xgb_model = XGBClassifier(n_estimators=100, max_depth=7, scale_pos_weight=5, random_state=42)\n",
+    "\n",
+    "# Fit models\n",
+    "logistic_model.fit(X_train_balanced, y_train_balanced)\n",
+    "tree_model.fit(X_train_balanced, y_train_balanced)\n",
+    "rf_model.fit(X_train_balanced, y_train_balanced)\n",
+    "knn_model.fit(X_train_balanced, y_train_balanced)\n",
+    "xgb_model.fit(X_train_balanced, y_train_balanced)\n",
     "\n",
     "# Initialize metrics collection\n",
     "metrics = {\n",
@@ -213,8 +218,15 @@
     "}\n",
     "\n",
     "# Evaluate models and plot individual confusion matrices\n",
+    "models = {\n",
+    "    \"Logistic Regression\": logistic_model,\n",
+    "    \"Decision Tree\": tree_model,\n",
+    "    \"Random Forest\": rf_model,\n",
+    "    \"K-Nearest Neighbors\": knn_model,\n",
+    "    \"XGBoost\": xgb_model\n",
+    "}\n",
+    "\n",
     "for name, model in models.items():\n",
-    "    model.fit(X_train_balanced, y_train_balanced)  # Train the model\n",
     "    y_pred = model.predict(X_test)  # Make predictions\n",
     "    y_prob = model.predict_proba(X_test)[:, 1] if hasattr(model, \"predict_proba\") else np.zeros(len(y_test))  # Probability predictions\n",
     "    fpr, tpr, _ = roc_curve(y_test, y_prob)  # Compute ROC curve\n",
@@ -283,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -291,21 +303,21 @@
      "output_type": "stream",
      "text": [
       "Enter the name of the landmark or address: white house\n",
-      "Enter the day of the week (0=Monday, 6=Sunday): 1\n",
+      "Enter the day of the week (0=Monday, 6=Sunday): 0\n",
       "Enter the hour of the day (0-23): 23\n",
       "Geocoded location: white house -> Latitude: 38.897699700000004, Longitude: -77.03655315\n",
       "\n",
       "--- Safety Prediction ---\n",
       "Location: white house (38.897699700000004, -77.03655315)\n",
-      "Day of Week: 1 (Weekday), Hour: 23:00\n",
+      "Day of Week: 0 (Weekday), Hour: 23:00\n",
       "Is Hotspot (based on historical data): No\n",
       "\n",
       "Predictions and probabilities (Dangerous Possibility):\n",
       "Logistic Regression: Safe (0.15)\n",
       "Decision Tree: Safe (0.27)\n",
-      "Random Forest: Safe (0.04)\n",
+      "Random Forest: Safe (0.14)\n",
       "K-Nearest Neighbors: Safe (0.00)\n",
-      "XGBoost: Safe (0.32)\n"
+      "XGBoost: Safe (0.24)\n"
      ]
     },
     {
@@ -389,20 +401,6 @@
     "    print(f\"XGBoost: {'Dangerous' if xgb_probability >= 0.5 else 'Safe'} ({xgb_probability:.2f})\")\n",
     "\n",
     "# Run the prediction function\n",
-    "logistic_model = LogisticRegression(class_weight='balanced', C=0.1, random_state=42)\n",
-    "logistic_model.fit(X_train_balanced, y_train_balanced)\n",
-    "\n",
-    "tree_model = DecisionTreeClassifier(max_depth=5, random_state=42)\n",
-    "tree_model.fit(X_train_balanced, y_train_balanced)\n",
-    "\n",
-    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced')\n",
-    "rf_model.fit(X_train_balanced, y_train_balanced)\n",
-    "\n",
-    "knn_model = KNeighborsClassifier(n_neighbors=5)\n",
-    "knn_model.fit(X_train_balanced, y_train_balanced)\n",
-    "\n",
-    "xgb_model = XGBClassifier(n_estimators=100, max_depth=7, scale_pos_weight=5, random_state=42)\n",
-    "xgb_model.fit(X_train_balanced, y_train_balanced)\n",
     "predict_safety_with_landmark()\n"
    ]
   },
