add function of limitation in DC area

--- a/dc_crime-Landmark.ipynb
+++ b/dc_crime-Landmark.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -295,29 +295,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the name of the landmark or address: white house\n",
-      "Enter the day of the week (0=Monday, 6=Sunday): 0\n",
-      "Enter the hour of the day (0-23): 23\n",
-      "Geocoded location: white house -> Latitude: 38.897699700000004, Longitude: -77.03655315\n",
+      "Geocoded location: DC capitol building -> Latitude: 38.8825992, Longitude: -77.00764881359152\n",
       "\n",
       "--- Safety Prediction ---\n",
-      "Location: white house (38.897699700000004, -77.03655315)\n",
-      "Day of Week: 0 (Weekday), Hour: 23:00\n",
+      "Location: DC capitol building (38.8825992, -77.00764881359152)\n",
+      "Day of Week: 0 (Weekday), Hour: 0:00\n",
       "Is Hotspot (based on historical data): No\n",
       "\n",
       "Predictions and probabilities (Dangerous Possibility):\n",
-      "Logistic Regression: Safe (0.15)\n",
-      "Decision Tree: Safe (0.27)\n",
-      "Random Forest: Safe (0.14)\n",
+      "Logistic Regression: Dangerous (0.76)\n",
+      "Decision Tree: Safe (0.48)\n",
+      "Random Forest: Safe (0.15)\n",
       "K-Nearest Neighbors: Safe (0.00)\n",
-      "XGBoost: Safe (0.24)\n"
+      "XGBoost: Dangerous (0.70)\n"
      ]
     },
     {
@@ -332,14 +329,18 @@
    "source": [
     "from geopy.geocoders import Nominatim\n",
     "\n",
-    "# Enhanced Prediction Function with Geocoding Support\n",
+    "# Enhanced Prediction Function with Geocoding Support and DC Boundary Check\n",
     "def predict_safety_with_landmark():\n",
     "    \"\"\"\n",
     "    Predict the safety of a given location and time using multiple machine learning models.\n",
     "    The function supports Logistic Regression, Decision Tree, Random Forest, KNN, and XGBoost.\n",
-    "    Allows users to input a landmark instead of latitude and longitude.\n",
+    "    Allows users to input a landmark instead of latitude and longitude, with DC area restriction.\n",
     "    \"\"\"\n",
     "    geolocator = Nominatim(user_agent=\"crime_prediction\")\n",
+    "    \n",
+    "    # Define DC boundary (approximate bounding box for Washington, D.C.)\n",
+    "    DC_LAT_MIN, DC_LAT_MAX = 38.7916, 38.9956\n",
+    "    DC_LON_MIN, DC_LON_MAX = -77.1198, -76.9094\n",
     "\n",
     "    try:\n",
     "        # Step 1: Get user input for location and time details\n",
@@ -355,6 +356,12 @@
     "\n",
     "        latitude = location.latitude\n",
     "        longitude = location.longitude\n",
+    "\n",
+    "        # Check if the coordinates are within DC boundaries\n",
+    "        if not (DC_LAT_MIN <= latitude <= DC_LAT_MAX and DC_LON_MIN <= longitude <= DC_LON_MAX):\n",
+    "            print(f\"Error: The location '{landmark}' is outside the Washington, D.C. area.\")\n",
+    "            return\n",
+    "\n",
     "        print(f\"Geocoded location: {landmark} -> Latitude: {latitude}, Longitude: {longitude}\")\n",
     "    except ValueError:\n",
     "        print(\"Invalid input. Please enter numeric values for day and hour.\")\n",
@@ -414,7 +421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
