add level of danger

--- a/dc_crime-Landmark.ipynb
+++ b/dc_crime-Landmark.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -295,26 +295,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Geocoded location: DC capitol building -> Latitude: 38.8825992, Longitude: -77.00764881359152\n",
+      "Enter the name of the landmark or address: white house\n",
+      "Enter the day of the week (0=Monday, 6=Sunday): 0\n",
+      "Enter the hour of the day (0-23): 0\n",
+      "Geocoded location: white house -> Latitude: 38.897699700000004, Longitude: -77.03655315\n",
       "\n",
       "--- Safety Prediction ---\n",
-      "Location: DC capitol building (38.8825992, -77.00764881359152)\n",
+      "Location: white house (38.897699700000004, -77.03655315)\n",
       "Day of Week: 0 (Weekday), Hour: 0:00\n",
       "Is Hotspot (based on historical data): No\n",
       "\n",
-      "Predictions and probabilities (Dangerous Possibility):\n",
-      "Logistic Regression: Dangerous (0.76)\n",
-      "Decision Tree: Safe (0.48)\n",
-      "Random Forest: Safe (0.15)\n",
-      "K-Nearest Neighbors: Safe (0.00)\n",
-      "XGBoost: Dangerous (0.70)\n"
+      "Predictions and probabilities (Risk Levels):\n",
+      "Logistic Regression: Medium (0.61)\n",
+      "Decision Tree: Low (0.20)\n",
+      "Random Forest: Low (0.06)\n",
+      "K-Nearest Neighbors: Low (0.00)\n",
+      "XGBoost: Low (0.24)\n"
      ]
     },
     {
@@ -395,20 +398,29 @@
     "        ]['IsHotspot'] == 1\n",
     "    ) else \"No\"\n",
     "\n",
+    "    # Helper function to determine risk level\n",
+    "    def get_risk_level(probability):\n",
+    "        if probability < 0.33:\n",
+    "            return \"Low\"\n",
+    "        elif probability < 0.66:\n",
+    "            return \"Medium\"\n",
+    "        else:\n",
+    "            return \"High\"\n",
+    "\n",
     "    # Step 6: Output the results in a user-friendly format\n",
     "    print(\"\\n--- Safety Prediction ---\")\n",
     "    print(f\"Location: {landmark} ({latitude}, {longitude})\")\n",
     "    print(f\"Day of Week: {day_of_week} ({'Weekend' if is_weekend else 'Weekday'}), Hour: {hour}:00\")\n",
     "    print(f\"Is Hotspot (based on historical data): {is_hotspot}\")\n",
-    "    print(\"\\nPredictions and probabilities (Dangerous Possibility):\")\n",
-    "    print(f\"Logistic Regression: {'Dangerous' if logistic_probability >= 0.5 else 'Safe'} ({logistic_probability:.2f})\")\n",
-    "    print(f\"Decision Tree: {'Dangerous' if tree_probability >= 0.5 else 'Safe'} ({tree_probability:.2f})\")\n",
-    "    print(f\"Random Forest: {'Dangerous' if rf_probability >= 0.5 else 'Safe'} ({rf_probability:.2f})\")\n",
-    "    print(f\"K-Nearest Neighbors: {'Dangerous' if knn_probability >= 0.5 else 'Safe'} ({knn_probability:.2f})\")\n",
-    "    print(f\"XGBoost: {'Dangerous' if xgb_probability >= 0.5 else 'Safe'} ({xgb_probability:.2f})\")\n",
+    "    print(\"\\nPredictions and probabilities (Risk Levels):\")\n",
+    "    print(f\"Logistic Regression: {get_risk_level(logistic_probability)} ({logistic_probability:.2f})\")\n",
+    "    print(f\"Decision Tree: {get_risk_level(tree_probability)} ({tree_probability:.2f})\")\n",
+    "    print(f\"Random Forest: {get_risk_level(rf_probability)} ({rf_probability:.2f})\")\n",
+    "    print(f\"K-Nearest Neighbors: {get_risk_level(knn_probability)} ({knn_probability:.2f})\")\n",
+    "    print(f\"XGBoost: {get_risk_level(xgb_probability)} ({xgb_probability:.2f})\")\n",
     "\n",
     "# Run the prediction function\n",
-    "predict_safety_with_landmark()\n"
+    "predict_safety_with_landmark()"
    ]
   },
   {
@@ -421,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
